change tmux status bar

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -34,3 +34,21 @@ bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
+
+# status bar config
+set-option -g status on
+set-option -g status-interval 1
+set-option -g status-justify absolute-centre
+set-option -g status-keys vi
+set-option -g status-position bottom
+set-option -g status-style fg=white,bg=black
+set-option -g status-left-length 20
+set-option -g status-left-style default
+set-option -g status-left "#[fg=green,bright]#(whoami)#[default]"
+set-option -g status-right-length 140
+set-option -g status-right-style default
+set-option -g status-right "#[fg=green,bg=default,bright]#(date) "
+set-window-option -g window-status-style fg=white
+set-window-option -g window-status-style bg=default
+set-window-option -g window-status-current-style fg=white
+set-window-option -g window-status-current-style bg=default
