--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -41,7 +41,7 @@ set-option -g status-interval 1
 set-option -g status-justify absolute-centre
 set-option -g status-keys vi
 set-option -g status-position bottom
-set-option -g status-style fg=white,bg=black
+set-option -g status-style fg=white,bg=default
 set-option -g status-left-length 20
 set-option -g status-left-style default
 set-option -g status-left "#[fg=green,bright]#(whoami)#[default]"
