--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -23,10 +23,10 @@ cyan = "#8FBCBB"
 white = "#ECEFF4"
 
 [font]
-size = 12
+size = 16
 
 [font.normal]
-family = "JetBrains Mono nerd font"
+family = "Iosevka Nerd Font"
 style = "Regular"
 
 [font.offset]
@@ -34,11 +34,11 @@ x = 0
 y = 0
 
 [window]
-opacity = 1
+opacity = 0.95
 
 [window.padding]
-x = 16
-y = 16
+x = 0
+y = 0
 
 [env]
 TERM = "xterm-256color"
