--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -26,7 +26,7 @@ white = "#ECEFF4"
 size = 16
 
 [font.normal]
-family = "Iosevka Nerd Font"
+family = "JetBrains Mono Nerd Font"
 style = "Regular"
 
 [font.offset]
