--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,32 +1,4 @@
-[colors.primary]
-background = '#181818'
-foreground = '#d8d8d8'
-
-[colors.cursor]
-text = '#181818'
-cursor = '#d8d8d8'
-
-# Normal colors
-[colors.normal]
-black   = '#181818'
-red     = '#ab4642'
-green   = '#a1b56c'
-yellow  = '#f7ca88'
-blue    = '#7cafc2'
-magenta = '#ba8baf'
-cyan    = '#86c1b9'
-white   = '#d8d8d8'
-
-# Bright colors
-[colors.bright]
-black   = '#585858'
-red     = '#ab4642'
-green   = '#a1b56c'
-yellow  = '#f7ca88'
-blue    = '#7cafc2'
-magenta = '#ba8baf'
-cyan    = '#86c1b9'
-white   = '#f8f8f8'
+general.import = ["~/.config/alacritty/colors.toml"]
 
 [font]
 size = 16
@@ -43,8 +15,12 @@ y = 0
 opacity = 1
 
 [window.padding]
-x = 0
-y = 0
+x = 15
+y = 15
+
+[window.dimensions]
+columns = 150
+lines = 100
 
 [env]
 TERM = "xterm-256color"
