--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -5,14 +5,7 @@
     "modules-left": ["clock","tray"],
     "modules-center": ["sway/workspaces"],
     "modules-right": ["cpu", "memory", "pulseaudio", "network", "battery"],
-
     "sway/workspaces": {
-        "format": "{icon}",
-        "format-icons": {
-            "focused": "",
-            "default": "",
-            "empty": ""
-        },
         "persistent-workspaces": {
             "1": [],
             "2": [],
@@ -40,73 +33,50 @@
             "on-click": "shift_up"
         }
     },
-    "network": {
-        "format-wifi": " {essid}",
-        "format-ethernet":"",
-        "format-disconnected": "",
-        "tooltip-format-disconnected": "Error",
-        "tooltip-format-wifi": "{essid} ({signalStrength}%) ",
-        "tooltip-format-ethernet": "{ifname} 🖧 ",
-        "on-click": "alacritty -e nmtui"
-    },
-    "bluetooth": {
-        "format-on": "󰂯",
-        "format-off": "BT-off",
-        "format-disabled": "󰂲",
-        "format-connected-battery": "{device_battery_percentage}% 󰂯",
-        "format-alt": "{device_alias} 󰂯",
-        "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
-        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
-        "tooltip-format-enumerate-connected": "{device_alias}\n{device_address}",
-        "tooltip-format-enumerate-connected-battery": "{device_alias}\n{device_address}\n{device_battery_percentage}%",
-        "on-click-right": "blueman-manager",
-    }, 
-    "pulseaudio": {
-        "format": "{icon} {volume}%",
-        "format-bluetooth": "{volume}% {icon}",
-        "format-muted": "",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "phone-muted": "",
-            "portable": "",
-            "car": "",
-            "default": ["", ""]
-        },
-        "scroll-step": 1,
-        "on-click": "pavucontrol",
-    },
-    "battery": {
-        "interval":30,
-        "states": {
-            "good": 95,
-            "warning": 30,
-            "critical": 20
-        },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% 󰂄",
-        "format-plugged": "{capacity}% 󰂄 ",
-        "format-alt": "{time} {icon}",
-        "format-icons": [
-            "󰁻",
-            "󰁼",
-            "󰁾",
-            "󰂀",
-            "󰂂",
-            "󰁹"
-        ],
-    },
-    "cpu": {
-        "format": "CPU: {usage}%",
-        "tooltip": true
-    },
-    "memory": {
-        "format": "MEM: {used} GiB"
+    "sway/window": {
+        "max-length": 50
     },
     "tray": {
-        "icon-size": 16,
-        "spacing": 10
+        "spacing": 10,
+        "tooltip": false
     },
-} 
+    "cpu": {
+        "format": "cpu {usage}%",
+        "interval": 2,
+        "states": {
+            "critical": 90
+        }
+    },
+    "memory": {
+        "format": "mem {percentage}%",
+        "interval": 2,
+        "states": {
+            "critical": 80
+        }
+    },
+    "battery": {
+        "format": "bat {capacity}%",
+        "interval": 5,
+        "states": {
+            "warning": 20,
+            "critical": 10
+        },
+        "tooltip": false
+    },
+    "network": {
+        "format-wifi": "wifi {bandwidthDownBits}",
+        "format-ethernet": "enth {bandwidthDownBits}",
+        "format-disconnected": "no network",
+        "interval": 5,
+        "tooltip": false
+    },
+    "pulseaudio": {
+        "scroll-step": 5,
+        "max-volume": 150,
+        "format": "vol {volume}%",
+        "format-bluetooth": "vol {volume}%",
+        "nospacing": 1,
+        "on-click": "pavucontrol",
+        "tooltip": false
+    }
+}
