--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,10 @@
-set -ga terminal-overrides ',xterm-256color:Tc'
+# Use proper terminal with true color
 set -g default-terminal "tmux-256color"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
+set -as terminal-overrides ',*:Tc'
+
+# Tell tmux to correctly handle wide characters
+set -g status-left-length 100
+set -g status-right-length 200
 
 set -g base-index 1
 set -g renumber-windows on
@@ -8,7 +12,6 @@ set -g escape-time 0
 set -g mouse on
 setw -g mode-keys vi
 set -g set-clipboard on
-set -g default-terminal "${TERM}"
 
 bind h select-pane -L
 bind j select-pane -D 
