--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,100 +1,94 @@
 {
     "layer": "top",
+    "spacing": 0,
+    "height": 0,
+    "margin-bottom": 0,
+    "margin-top": 10,
     "position": "top",
-    "reload_style_on_change": true,
-    "height": 40,
-
-    "modules-left": ["clock", "tray"],
-    "modules-center": ["sway/workspaces"],
-    "modules-right": ["cpu", "memory", "pulseaudio", "network", "battery"],
+    "margin-right": 500,
+    "margin-left": 500,
+    "modules-left": [
+        "sway/workspaces"
+    ],
+    "modules-center": [
+        "clock"
+    ],
+    "modules-right": [
+        "tray",
+        "network",
+        "pulseaudio",
+        "battery",
+        "sway/language",
+        "cpu",
+        "memory"
+    ],
 
     "sway/workspaces": {
-        "format": "{icon}",
-        "format-icons": {
-            "focused": "",
-            "default": "",
-            "empty": ""
-        },
-        "persistent-workspaces": {
-            "1": [], "2": [], "3": [], "4": [], "5": [],
-            "6": [], "7": [], "8": [], "9": [], "10": []
-        }
-    },
+        "disable-scroll": true,
+        "all-outputs": false,
+        "tooltip": false
 
+    },
     "clock": {
+        "disable-scroll": true,
         "format": "{:%a %b %d %I:%M %p}",
-        "interval": 1,
-        "tooltip-format": "<tt>{calendar}</tt>",
-        "calendar": {
-            "format": {
-                "today": "<span color='#fAfBfC'><b>{}</b></span>"
-            }
-        },
-        "actions": {
-            "on-click-right": "shift_down",
-            "on-click": "shift_up"
-        }
+        "tooltip": false,
+        "interval": 10,
+        "on-click": "gnome-calendar"
     },
-
-    "sway/window": {
-        "max-length": 50
-    },
-
     "tray": {
         "spacing": 10,
         "tooltip": false
     },
-
-    "cpu": {
-        "format": " {usage}%",
-        "interval": 2,
-        "states": {
-            "critical": 90
-        },
+    "network": {
+        "format-wifi": " ",
+        "format-ethernet": " ",
+        "format-disconnected": ":( No wifi",
+        "interval": 5,
         "tooltip": false
     },
-
-    "memory": {
-        "format": " {percentage}%",
-        "interval": 2,
-        "states": {
-            "critical": 80
-        },
-        "tooltip": false
-    },
-
     "pulseaudio": {
         "scroll-step": 5,
         "max-volume": 150,
-        "format": " {volume}%",
-        "format-bluetooth": " {volume}%",  // Headphones icon
+        "on-scroll-up": "pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl set-sink-volume @DEFAULT_SINK@ 100% --",
+        "on-scroll-down": "pactl set-sink-volume @DEFAULT_SINK@ -5%",
+        "format": "{icon} {volume}%",
+        "format-bluetooth": "{icon} {volume}%",
+        "format-icons": [
+            "",
+            "",
+            ""
+        ],
         "nospacing": 1,
+        "format-muted": "X",
         "on-click": "pavucontrol",
         "tooltip": false
     },
-
-    "network": {
-        "format-wifi": " {bandwidthDownBits}",
-        "format-ethernet": " {bandwidthDownBits}",
-        "format-disconnected": " no net",
-        "interval": 5,
-        "tooltip": false
-    },
-
     "battery": {
         "format": "{icon} {capacity}%",
-        "interval": 5,
+        "format-charging": " {capacity}%",   
+        "format-plugged": " {capacity}%",      
+        "format-full": " {capacity}%",           
+        "format-icons": ["", "", "", "", ""], 
+        "on-click": "kitty --hold btop",
         "states": {
             "warning": 20,
             "critical": 10
         },
-        "tooltip": false,
-        "format-icons": [
-            "",  // 0–20%
-            "",  // 21–40%
-            "",  // 41–60%
-            "",  // 61–80%
-            ""   // 81–100%
-        ]
+        "interval": 10
+    },
+    "sway/language": {
+        "format": "{}",
+        "on-click": "swaymsg input type:keyboard xkb_switch_layout next",
+    },
+    "cpu": {
+        "interval": 10,
+        "format": "CPU: {}%",
+        "max-length": 10
+    },
+    "memory": {
+        "interval": 30,
+        "format": "RAM: {used:0.1f}G/{total:0.1f}G"
     }
 }
+
