change colorscheme and change borders, move to awww from swww

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include current-theme.conf
+include theme.conf
 
 # Fix window decorations
 linux_display_server x11
@@ -16,11 +16,11 @@ cursor_shape block
 cursor_blink true
 
 # Window opacity
-background_opacity 1
+background_opacity 0.9
 
 # Padding
-window_margin_width 0
-window_margin_height 0
+window_margin_width 10
+window_margin_height 10
 
 # Window dimensions on startup
 initial_window_width 110
