--- a/.config/sway/config
+++ b/.config/sway/config
@@ -10,25 +10,52 @@ set $menu rofi -show drun
 
 ### Appearance
 font pango:Iosevka Nerd Font 16
+
+# Gaps
 smart_gaps off
-gaps inner 15
-gaps outer 15
+gaps inner 5
+gaps outer 5
+
+# Borders
 default_border pixel 1
 default_floating_border pixel 1
 
-# Colors
+#################################
+# Bar
+#################################
+
 bar {
     position top
     swaybar_command waybar
 }
 
-# Colors
-client.focused          #58a6ff #0d1117 #c9d1d9 #58a6ff #58a6ff
+#################################
+# Colors — GitHub Dark
+#
+# Format:
+# client.<state> border background text indicator child_border
+#################################
+
+# Focused window
+# Neutral gray border, blue indicator only
+client.focused          #30363d #0d1117 #c9d1d9 #58a6ff #30363d
+
+# Focused but inactive
+# Slightly darker, no accent
 client.focused_inactive #21262d #0d1117 #c9d1d9 #21262d #21262d
+
+# Unfocused windows
+# Fade into the background
 client.unfocused        #161b22 #0d1117 #8b949e #161b22 #161b22
-client.urgent           #ff7b72 #0d1117 #ffffff #ff7b72 #ff7b72
+
+# Urgent windows
+# GitHub red, noticeable but not harsh
+client.urgent           #da3633 #0d1117 #ffffff #da3633 #da3633
+
+# Placeholder (almost invisible)
 client.placeholder      #0d1117 #0d1117 #c9d1d9 #0d1117 #0d1117
 
+# Background behind windows
 client.background       #0d1117
 
 ### Idle configuration
@@ -65,6 +92,7 @@ bindsym $mod+t exec rofi -show emoji
 floating_modifier $mod normal
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+e exec ~/.local/bin/powermenu
+bindsym $mod+Shift+f exec ~/.local/bin/wallpaper-changer
 
 # Moving around
 bindsym $mod+$left focus left
